--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Publish kabal avro schema
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - 'gradle.properties'
 
